--- a/prosjekt2/frontend/src/pages/Playlists/Playlists.css
+++ b/prosjekt2/frontend/src/pages/Playlists/Playlists.css
@@ -75,6 +75,12 @@
 	margin-top: 20px;
 }
 
+@media (max-width: 600px) {
+	.new-playlist-button{
+		align-self: center;
+	}
+}
+
 @media (prefers-color-scheme: dark) {
 	.playlist-card {
 		border-color: #ffffff !important;
